Oct_13_'Activity'_Herds_(Polymorphism_OOP)